fixed enhancer preview not showing the correct name

--- a/src/ui.css
+++ b/src/ui.css
@@ -9,6 +9,10 @@
 		@apply cursor-pointer rounded-md border-2 border-indigo-700 bg-indigo-500 px-4 py-2;
 	}
 
+	button:disabled {
+		@apply cursor-not-allowed;
+	}
+
 	input:not(.ignore)[type='text'],
 	input:not(.ignore)[type='url'],
 	input:not(.ignore)[type='email'],
